tests/Fail/UnneededExceptionTest.nim
import ../../ForceResult

proc main() {.forceResult: [
    OSError
].} =
    discard
main()
